src/tests/fixtures/type_definitions/ClassWithoutAName.invalid.ts.expected
-----------------
INPUT
----------------- 
/**
 * @GQLType
 */
export default class {
  /** @GQLField */
  hello(): string {
    return "Hello world!";
  }
}

-----------------
OUTPUT
-----------------
src/tests/fixtures/type_definitions/ClassWithoutAName.invalid.ts:4:1 - error: Unexpected `@GQLType` annotation on unnamed class declaration.

  4 export default class {
    ~~~~~~~~~~~~~~~~~~~~~~
  5   /** @GQLField */
    ~~~~~~~~~~~~~~~~~~
... 
  8   }
    ~~~
  9 }
    ~
